@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.37 2003/07/17 21:35:15 grant Exp $
+# $NetBSD: Makefile,v 1.38 2004/01/28 15:55:17 xtraeme Exp $
 # FreeBSD Id: Makefile,v 1.13 1997/09/06 19:58:03 gj Exp
 #
 
 DISTNAME=		vile-9.3
 PKGNAME=		xvile-9.3
+PKGREVISION=		1
 CATEGORIES=		editors
 MASTER_SITES=		ftp://dickey.his.com/vile/ \
 			ftp://invisible-island.net/vile/
@@ -13,7 +14,7 @@ MAINTAINER=		tech-pkg@NetBSD.org
 COMMENT=		VI Like Emacs, X11 version -- a fully "X aware" vi work-alike
 
 USE_BUILDLINK2=		# defined
-USE_X11BASE=		# defined
+USE_X11=		# defined
 
 GNU_CONFIGURE=		# defined
 CONFIGURE_ARGS+=	--with-perl
