@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4636 2004/01/28 15:45:56 xtraeme Exp $
+$NetBSD: CHANGES,v 1.4637 2004/01/28 15:56:09 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -521,3 +521,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated xmame to 0.78.1nb1 [xtraeme 2004-01-28]
 	Updated xmess to 0.78.1nb1 [xtraeme 2004-01-28]
 	Updated minivmac to 0.1.7nb1 [xtraeme 2004-01-28]
+	Updated xvile to 9.3nb1 [xtraeme 2004-01-28]
